🐛BUG FIX: overflow x hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,10 +82,6 @@
   }
 }
 
-* {
-  overflow-x: hidden;
-}
-
 @layer base {
   * {
     @apply border-border;
